FIle action button hover state

--- a/client/pages/filespage/share.scss
+++ b/client/pages/filespage/share.scss
@@ -68,6 +68,9 @@
                     width: 20px;
                     float: right;
                     cursor: pointer;
+                    &:hover {
+                        opacity: 0.7;
+                    }
                 }
             }
         }
